# Nexus_EducationV2

./: .gitignore  CONFIGURACAO_SUPABASE.md  DOCLING_INTEGRATION.md  GUIA_TESTE_LOCAL.md  README.md  README_DOCLING.md  SUPABASE_SCHEMA.md  ai.py  env.example  executar_local.bat  executar_local.ps1  executar_simples.bat  helper.py  pyproject.toml  renovar_token.py  requirements.txt  run.py  teste_poetry_corrigido.bat
.streamlit/: config.toml
src/: __init__.py
src/app/: app.py
src/core/: __init__.py
src/core/config/: supabase_config.py
src/core/database/: database.py  database_separado.py  supabase_database.py
src/core/models/: analise.py  analise_curso.py  curso.py  curso_tags.py  cursos_disciplina.py  disciplinas.py  ementa.py  ementa_disciplina.py  professor.py  professor_curso.py  tags.py
src/core/services/: adaptive_extractor.py  docling_extractor.py  download_ementa.py  format_learning.py  google_drive_service.py
src/core/utils/: __init__.py  authenticate.py  config.py
src/data/: format_learning.json
src/data/database/: README.md  analises.json  curso_tags.json  cursos.json  cursos_disciplina.json  disciplinas.json  ementas.json  professor_curso.json  professores.json  tags.json
src/docs/: ESTRUTURA_PROJETO.md  GOOGLE_DRIVE_SETUP.md
