[tool.poetry]
name = "nexus-education"
version = "0.1.0"
description = "Verificador de ementas de alunos com objetivo de analisar essas ementas em lote."
authors = ["Malieni <gui.souza.malieni@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
google-api-python-client = "^2.181.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.2"
supabase = "^2.3.0"
pydantic = "^2.11.9"
streamlit = "^1.49.1"
streamlit-aggrid = "^1.1.8"
langchain-groq = "^0.3.8"
python-dotenv = "^1.1.1"
pymupdf = "^1.26.4"
fitz = "^0.0.1"
plotly = "^5.17.0"
bcrypt = "^5.0.0"
docling = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
